# hexlet_pytest

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: job.yml
tests/: test_stack.py
