[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Oleg <antoshinov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
